--- a/Practice_Project.csproj
+++ b/Practice_Project.csproj
@@ -50,6 +50,8 @@
       <_ContentIncludedByDefault Remove="Views\Fines\ShowDetails.cshtml" />
       <_ContentIncludedByDefault Remove="Views\FinePay\MainIndex.cshtml" />
       <_ContentIncludedByDefault Remove="Views\FinePay\ShowDetails.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Dashboard\Dashboard.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Dashboard\Index.cshtml" />
     </ItemGroup>
 
     <ItemGroup>
